small temp fix for fab not centered on safari

--- a/app/pages/venue-list/venue-list.scss
+++ b/app/pages/venue-list/venue-list.scss
@@ -12,6 +12,11 @@
         z-index: 1000;
     }
 
+    .ios .guestbook-button {
+        text-transform: uppercase;
+        display: block;  
+    }
+
     .item-bold {
         font-weight: bold;
     }
